--- a/templates/p6.html
+++ b/templates/p6.html
@@ -16,6 +16,7 @@
         <button class="btn">Answer 4</button>
       </div>
       <button id="next-btn">Next</button>
+      <button id="next-btn" onclick="">Continue Learning</button>
     </div>
   </div>
   <script src="{{url_for('static', filename='p6.js')}}"></script>
